--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/easyctl?characterEncoding=utf8
 spring.datasource.druid.username=root
-spring.datasource.druid.password=password
+spring.datasource.druid.password=1865018650
 # ????????
 spring.datasource.druid.initial-size=10
 # ?????
