--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 server.port=8080
+spring.velocity.content-type=application/json
+jwt.secret=aeuwrh7@09ret$gj304^89#$
+
 easymqtt.brokerHost=tcp://192.168.1.7:1883
 easymqtt.sourceTopic=/cli/server
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/easyctl?characterEncoding=utf8
+spring.datasource.druid.url=jdbc:mysql://192.168.1.7:3306/easyctl?characterEncoding=utf8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=1865018650
 # ????????
