--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8080
 jwt.secret=aeuwrh7@09ret$gj304^89#$
 
 easymqtt.brokerHost=tcp://192.168.1.7:1883
-easymqtt.sourceTopic=/cli/server
+easymqtt.mqttAccount=root
+easymqtt.mqttPassword=13241324
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
